capitolul 6 part 2