@@ -8,6 +8,7 @@ import se.magnus.api.composite.product.*;
 import se.magnus.api.core.product.Product;
 import se.magnus.api.core.recommendation.Recommendation;
 import se.magnus.api.core.review.Review;
+import se.magnus.api.exceptions.NotFoundException;
 import se.magnus.util.http.ServiceUtil;
 
 import java.util.List;
@@ -19,45 +20,41 @@ public class ProductCompositeServiceImpl implements ProductCompositeService {
   private static final Logger LOG = LoggerFactory.getLogger(ProductCompositeServiceImpl.class);
 
   private final ServiceUtil serviceUtil;
-  private final ProductCompositeIntegration integration;
+  private ProductCompositeIntegration integration;
 
-  public ProductCompositeServiceImpl(ServiceUtil serviceUtil, ProductCompositeIntegration integration) {
+  public ProductCompositeServiceImpl(
+    ServiceUtil serviceUtil, ProductCompositeIntegration integration) {
+
     this.serviceUtil = serviceUtil;
     this.integration = integration;
   }
 
   @Override
-  public ProductAggregate getProduct(int productId) {
-    Product product = integration.getProduct(productId);
-    List<Recommendation> recommendations = integration.getRecommendations(productId);
-    List<Review> reviews = integration.getReviews(productId);
-
-    return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
-  }
-
-  @Override
   public void createProduct(ProductAggregate body) {
+
     try {
-      Product product = new Product(body.getProductId(),
-        body.getName(), body.getWeight(), null);
+
+      LOG.debug("createCompositeProduct: creates a new composite entity for productId: {}", body.getProductId());
+
+      Product product = new Product(body.getProductId(), body.getName(), body.getWeight(), null);
       integration.createProduct(product);
+
       if (body.getRecommendations() != null) {
         body.getRecommendations().forEach(r -> {
-          Recommendation recommendation = new Recommendation(
-            body.getProductId(),
-            r.getRecommendationId(), r.getAuthor(), r.getRate(),
-            r.getContent(), null);
-//          integration.createRecommendation(recommendation);
+          Recommendation recommendation = new Recommendation(body.getProductId(), r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent(), null);
+          integration.createRecommendation(recommendation);
         });
       }
+
       if (body.getReviews() != null) {
         body.getReviews().forEach(r -> {
-          Review review = new Review(body.getProductId(),
-            r.getReviewId(), r.getAuthor(), r.getSubject(),
-            r.getContent(), null);
-//          integration.createReview(review);
+          Review review = new Review(body.getProductId(), r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent(), null);
+          integration.createReview(review);
         });
       }
+
+      LOG.debug("createCompositeProduct: composite entities created for productId: {}", body.getProductId());
+
     } catch (RuntimeException re) {
       LOG.warn("createCompositeProduct failed", re);
       throw re;
@@ -66,10 +63,36 @@ public class ProductCompositeServiceImpl implements ProductCompositeService {
 
 
   @Override
+  public ProductAggregate getProduct(int productId) {
+
+    LOG.debug("getCompositeProduct: lookup a product aggregate for productId: {}", productId);
+
+    Product product = integration.getProduct(productId);
+    if (product == null) {
+      throw new NotFoundException("No product found for productId: " + productId);
+    }
+
+    List<Recommendation> recommendations = integration.getRecommendations(productId);
+
+    List<Review> reviews = integration.getReviews(productId);
+
+    LOG.debug("getCompositeProduct: aggregate entity found for productId: {}", productId);
+
+    return createProductAggregate(product, recommendations, reviews, serviceUtil.getServiceAddress());
+  }
+
+  @Override
   public void deleteProduct(int productId) {
+
+    LOG.debug("deleteCompositeProduct: Deletes a product aggregate for productId: {}", productId);
+
     integration.deleteProduct(productId);
-//    integration.deleteRecommendations(productId);
-//    integration.deleteReviews(productId);
+
+    integration.deleteRecommendations(productId);
+
+    integration.deleteReviews(productId);
+
+    LOG.debug("deleteCompositeProduct: aggregate entities deleted for productId: {}", productId);
   }
 
   private ProductAggregate createProductAggregate(
@@ -84,21 +107,21 @@ public class ProductCompositeServiceImpl implements ProductCompositeService {
     int weight = product.getWeight();
 
     // 2. Copy summary recommendation info, if available
-    List<RecommendationSummary> recommendationSummaries =
-      (recommendations == null) ? null : recommendations.stream()
+    List<RecommendationSummary> recommendationSummaries = (recommendations == null) ? null :
+      recommendations.stream()
         .map(r -> new RecommendationSummary(r.getRecommendationId(), r.getAuthor(), r.getRate(), r.getContent()))
         .collect(Collectors.toList());
 
     // 3. Copy summary review info, if available
-    List<ReviewSummary> reviewSummaries =
-      (reviews == null) ? null : reviews.stream()
+    List<ReviewSummary> reviewSummaries = (reviews == null) ? null :
+      reviews.stream()
         .map(r -> new ReviewSummary(r.getReviewId(), r.getAuthor(), r.getSubject(), r.getContent()))
         .collect(Collectors.toList());
 
     // 4. Create info regarding the involved microservices addresses
     String productAddress = product.getServiceAddress();
-    String reviewAddress = (reviews != null && !reviews.isEmpty()) ? reviews.getFirst().getServiceAddress() : "";
-    String recommendationAddress = (recommendations != null && !recommendations.isEmpty()) ? recommendations.get(0).getServiceAddress() : "";
+    String reviewAddress = (reviews != null && reviews.size() > 0) ? reviews.get(0).getServiceAddress() : "";
+    String recommendationAddress = (recommendations != null && recommendations.size() > 0) ? recommendations.get(0).getServiceAddress() : "";
     ServiceAddresses serviceAddresses = new ServiceAddresses(serviceAddress, productAddress, reviewAddress, recommendationAddress);
 
     return new ProductAggregate(productId, name, weight, recommendationSummaries, reviewSummaries, serviceAddresses);
